# aiolibsql

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  aiolibsql_sqlalchemy.py  cli_test.py  example.py  pyproject.toml
.github/workflows/: wheels.yml
docs/: api.md
examples/: all_in_one.py  encryption.py  execute_script.py  memory.py  pool.py  remote_connect.py  sync_write.py  vector.py
examples/batch/: README.md  main.py
examples/encryption/: README.md  main.py
examples/local/: README.md  main.py
examples/memory/: README.md  main.py
examples/remote/: README.md  main.py
examples/sqlalchemy/: dialect.py  example.py
examples/sync/: README.md  main.py
examples/transaction/: README.md  main.py
examples/vector/: README.md  main.py
src/: lib.rs
tests/: test_suite.py
